se agrego un nuevo campo para distiguir el numero de prueba

--- a/app/views/etnhtransformers/index.html.erb
+++ b/app/views/etnhtransformers/index.html.erb
@@ -9,6 +9,7 @@
       <th>Mide</th>
       <th>Test mode</th>
       <th>Lost mv</th>
+      <th>t_number</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,6 +21,8 @@
         <td><%= etnhtransformer.mide %></td>
         <td><%= etnhtransformer.test_mode %></td>
         <td><%= etnhtransformer.lost_mv %></td>
+        <td><%= etnhtransformer.t_number%></td>
+
         <td><%= link_to 'Show', etnhtransformer %></td>
         <td><%= link_to 'Edit', edit_etnhtransformer_path(etnhtransformer) %></td>
         <td><%= link_to 'Destroy', etnhtransformer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
