--- a/app/views/etnxtransformers/index.html.erb
+++ b/app/views/etnxtransformers/index.html.erb
@@ -9,6 +9,7 @@
       <th>Mide</th>
       <th>Test mode</th>
       <th>Lost mv</th>
+      <th>t_number</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,6 +21,7 @@
         <td><%= etnxtransformer.mide %></td>
         <td><%= etnxtransformer.test_mode %></td>
         <td><%= etnxtransformer.lost_mv %></td>
+        <td><%= etnxtransformer.t_number%></td>
         <td><%= link_to 'Show', etnxtransformer %></td>
         <td><%= link_to 'Edit', edit_etnxtransformer_path(etnxtransformer) %></td>
         <td><%= link_to 'Destroy', etnxtransformer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
