--- a/app/views/hnswitches/index.html.erb
+++ b/app/views/hnswitches/index.html.erb
@@ -8,6 +8,7 @@
       <th>Phase</th>
       <th>Nozzle</th>
       <th>Mv</th>
+      <th>t_number</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,6 +19,7 @@
         <td><%= hnswitch.phase %></td>
         <td><%= hnswitch.nozzle %></td>
         <td><%= hnswitch.mv %></td>
+        <td><%= hnswitch.t_number%></td>
         <td><%= link_to 'Show', hnswitch %></td>
         <td><%= link_to 'Edit', edit_hnswitch_path(hnswitch) %></td>
         <td><%= link_to 'Destroy', hnswitch, method: :delete, data: { confirm: 'Are you sure?' } %></td>
