--- a/app/views/irtransformers/_form.html.erb
+++ b/app/views/irtransformers/_form.html.erb
@@ -51,6 +51,11 @@
     <%= f.text_field :resistence %>
   </div>
 
+  <div class="field">
+    <%= f.label :t_number %>
+    <%= f.text_field :t_number %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
