--- a/app/views/irtransformers/index.html.erb
+++ b/app/views/irtransformers/index.html.erb
@@ -13,6 +13,7 @@
       <th>Number</th>
       <th>Time</th>
       <th>Resistence</th>
+      <th>t_number</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -28,6 +29,7 @@
         <td><%= irtransformer.number %></td>
         <td><%= irtransformer.time %></td>
         <td><%= irtransformer.resistence %></td>
+        <td><%= irtransformer.t_number %></td>
         <td><%= link_to 'Show', irtransformer %></td>
         <td><%= link_to 'Edit', edit_irtransformer_path(irtransformer) %></td>
         <td><%= link_to 'Destroy', irtransformer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
