--- a/app/views/npfhtransformers/index.html.erb
+++ b/app/views/npfhtransformers/index.html.erb
@@ -9,6 +9,7 @@
       <th>Mide</th>
       <th>Test mode</th>
       <th>Lost mv</th>
+      <th>t_number</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,6 +21,7 @@
         <td><%= npfhtransformer.mide %></td>
         <td><%= npfhtransformer.test_mode %></td>
         <td><%= npfhtransformer.lost_mv %></td>
+        <td><%= npfhtransformer.t_number%></td>
         <td><%= link_to 'Show', npfhtransformer %></td>
         <td><%= link_to 'Edit', edit_npfhtransformer_path(npfhtransformer) %></td>
         <td><%= link_to 'Destroy', npfhtransformer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
