--- a/app/views/npfxtransformers/index.html.erb
+++ b/app/views/npfxtransformers/index.html.erb
@@ -9,6 +9,7 @@
       <th>Mide</th>
       <th>Test mode</th>
       <th>Lost mv</th>
+      <th>t_number</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,6 +21,7 @@
         <td><%= npfxtransformer.mide %></td>
         <td><%= npfxtransformer.test_mode %></td>
         <td><%= npfxtransformer.lost_mv %></td>
+        <td><%= npfxtransformer.t_number%></td>
         <td><%= link_to 'Show', npfxtransformer %></td>
         <td><%= link_to 'Edit', edit_npfxtransformer_path(npfxtransformer) %></td>
         <td><%= link_to 'Destroy', npfxtransformer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
