--- a/app/views/pfswitches/index.html.erb
+++ b/app/views/pfswitches/index.html.erb
@@ -13,6 +13,7 @@
       <th>Selector switch</th>
       <th>Mv</th>
       <th>Fp current</th>
+      <th>t_number</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -28,6 +29,7 @@
         <td><%= pfswitch.selector_switch %></td>
         <td><%= pfswitch.mv %></td>
         <td><%= pfswitch.fp_current %></td>
+        <td><%= pfswitch.t_number%></td>
         <td><%= link_to 'Show', pfswitch %></td>
         <td><%= link_to 'Edit', edit_pfswitch_path(pfswitch) %></td>
         <td><%= link_to 'Destroy', pfswitch, method: :delete, data: { confirm: 'Are you sure?' } %></td>
