--- a/app/views/sbbanks/_form.html.erb
+++ b/app/views/sbbanks/_form.html.erb
@@ -71,6 +71,11 @@
     <%= f.text_field :amperage_2hr %>
   </div>
 
+  <div class="field">
+    <%= f.label :t_number %>
+    <%= f.text_field :t_number %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
