--- a/app/views/trtranformers/index.html.erb
+++ b/app/views/trtranformers/index.html.erb
@@ -9,6 +9,7 @@
       <th>Nominal relationship</th>
       <th>Phase</th>
       <th>Difference</th>
+      <th>t_number</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,6 +21,7 @@
         <td><%= trtranformer.nominal_relationship %></td>
         <td><%= trtranformer.phase %></td>
         <td><%= trtranformer.difference %></td>
+        <td><%= trtranformer.t_number%></td>
         <td><%= link_to 'Show', trtranformer %></td>
         <td><%= link_to 'Edit', edit_trtranformer_path(trtranformer) %></td>
         <td><%= link_to 'Destroy', trtranformer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
