--- a/app/views/hnswitches/_form.html.erb
+++ b/app/views/hnswitches/_form.html.erb
@@ -26,6 +26,11 @@
     <%= f.text_field :mv %>
   </div>
 
+  <div class="field">
+    <%= f.label :t_number %>
+    <%= f.text_field :t_number %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
