--- a/app/views/irswitches/_form.html.erb
+++ b/app/views/irswitches/_form.html.erb
@@ -36,6 +36,11 @@
     <%= f.text_field :gigaohms %>
   </div>
 
+  <div class="field">
+    <%= f.label :t_number %>
+    <%= f.text_field :t_number %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
