--- a/app/views/trtranformers/_form.html.erb
+++ b/app/views/trtranformers/_form.html.erb
@@ -31,6 +31,11 @@
     <%= f.text_field :difference %>
   </div>
 
+  <div class="field">
+    <%= f.label :t_number %>
+    <%= f.text_field :t_number %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
